styles/widgets/common/drawer.less
@DRAWER_ZINDEX: 1000;

.dx-drawer {
    height: 100%;
    width: 100%;
    overflow: hidden;
    
    .touch-action(pinch-zoom);
}

.dx-drawer-wrapper {
    position: relative;
    overflow: hidden;
    height: 100%;
}

.dx-drawer-panel-content {
    z-index: @DRAWER_ZINDEX;
    overflow: hidden;
    position: absolute;
    top: 0px;
    bottom: 0px;

    &.dx-drawer-right {
        right: 0px;
    }

    &.dx-drawer-left {
        left: 0px;
    }
}

.dx-drawer-content {
    overflow: hidden;
    width: 100%;
    height: 100%;
    top: 0;
    z-index: 100;
}

.dx-drawer-shader {
    position: absolute;
    top: 0;
    height: 100%;
    width: 100%;
    z-index: 1;

    background-color: #111;
}

.dx-drawer-push {
    .dx-drawer-panel-content {
        z-index: 1;
    }
}

.dx-drawer-shrink {
    .dx-drawer-panel-content {
        flex: 0 0 auto;
        position: relative;
    }
    .dx-drawer-wrapper {
        flex: 1 0 auto;
        display: flex;
        flex-direction: row;
    }
    .dx-drawer-content {
        position: relative;
        flex: 1 1 auto;
    }
}

.dx-drawer-overlap {
    .dx-drawer-panel-content {
        overflow: visible;
    }

    .dx-drawer-wrapper {
        overflow: visible;
    }
}

